# sgam

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  original_sgam.py  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: getting-started.md  index.md  science.md
docs/API_Reference/: __init__.md  disturbance.md  pft.md  sgam.md  utils.md
docs/_static/: pft_table.md
scripts/: gen_science_assets.py
src/sgam/: __init__.py  _version.py  disturbance.py  pft.py  sgam.py  utils.py
src/sgam/config/: pft_defaults.toml
tests/: conftest.py  test_balance.py  test_benchmark.py  test_disturbance.py  test_pft.py  test_properties.py  test_sgam.py  test_utils.py
