[project]
name = "sgam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jmarshrossney", email = "17361029+jmarshrossney@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sgam = "sgam:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
