[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[project]
name = "sgam"
version = "0.2.1"
description = "A Simplified Growth and Allocation Model (SGAM) for the allocation of gross primary productivity (GPP) to plant carbon pools across different plant types."
readme = "README.md"
authors = [
    { name = "jmarshrossney", email = "17361029+jmarshrossney@users.noreply.github.com" },
    { name = "vmyrgiotis", email = "" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "docs"},
    "mypy>=1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.4",
    "rust-just>=1.46.0",
]
docs = [
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.24",
    "matplotlib>=3.5",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "hypothesis>=6.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "NPY", # numpy-specific rules (deprecated API etc.)
    "D",   # pydocstyle
]
ignore = ["E501"]  # line length enforced by ruff format, not ruff check

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"scripts/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
